infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observatory
  labels:
    name: observatory
    istio-injection: enabled
